--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Swat's site</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="favicon.ico">
 
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Swat's site</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
 
-  </body>
+</head>
+
+<body>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="could-img">
+    <h1>I'm Swat</h1>
+    <p>A <span class="pro">pro</span>grammer.</p>
+    <img class="bottom-cloud" src="images/cloud.png" alt="could-img">
+    <img src="images/mountain.png" alt="mountain-img">
+  </div>
+
+  <div class="middle-container">
+
+  </div>
+
+  <div class="bottom-container">
+
+  </div>
+</body>
+
 </html>
