--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="could-img">
     <h1>I'm Swat</h1>
-    <p>A <span class="pro">pro</span>grammer.</p>
+    <h2>A <span class="pro">pro</span>grammer.</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="could-img">
     <img src="images/mountain.png" alt="mountain-img">
   </div>
