Cleanup and nicer implementation

--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
     <div class="profile">
       <img src="images/swat-headshot.png" alt="swat-photo">
       <h2>Hello.</h2>
-      <p>I am a Software and DevSecOps Engineer. I have an adorable corgi.</p>
+      <p class="intro">I am a Software and DevSecOps Engineer. I have an adorable corgi.</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="" src="https://as1.ftcdn.net/v2/jpg/03/29/01/04/1000_F_329010448_vweq31DdmKGXn1T9sJuLQgr0LmUcqXfb.jpg" alt="binary-img">
+        <img class="code-img" src="https://as1.ftcdn.net/v2/jpg/03/29/01/04/1000_F_329010448_vweq31DdmKGXn1T9sJuLQgr0LmUcqXfb.jpg" alt="binary-img">
         <h3>App development</h3>
-        <p>Learning how to develop a web page to promote my future apps.</p>
+        <p class="code-skill-description">Learning how to develop a web page to promote my future apps.</p>
       </div>
       <div class="skill-row">
-        <img class="" src="https://as2.ftcdn.net/v2/jpg/02/67/76/37/1000_F_267763761_uLdjGdFChN9qmHzDHIP46TE6HgtHltwV.jpg" alt="chicken-nuggets">
+        <img class="chili-img" src="https://as2.ftcdn.net/v2/jpg/02/67/76/37/1000_F_267763761_uLdjGdFChN9qmHzDHIP46TE6HgtHltwV.jpg" alt="chicken-nuggets">
         <h3>Chicken nuggets challenge</h3>
-        <p>Training for the chicken nugget challenge at my company.</p>
+        <p class="chili-skill-description">Training for the chicken nugget challenge at my company.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>If you want to challenge me or see my corgi.</h3>
-      <p>Corgis are cute and leave a like and subscribe.</p>
+      <p class="contact-message">Corgis are cute and leave a like and subscribe.</p>
       <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
     </div>
   </div>
@@ -55,7 +55,7 @@
     <a class="footer-link" href="https://www.linkedin.com/in/svongsay">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.github.com/sujuouda">Website</a>
-    <p>© 2022 Swat Vongsay</p>
+    <p class="copyright">© 2022 Swat Vongsay</p>
   </div>
 
 </body>
