--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <title>Swat's site</title>
-  <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,8 +52,7 @@
 
 
   <div class="bottom-container">
-<!--     <a class="footer-link" href="https://www.linkedin.com/in/svongsay">LinkedIn</a> -->
-    <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="svongsay" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/svongsay?trk=profile-badge">Swat V.</a></div>
+    <a class="footer-link" href="https://www.linkedin.com/in/svongsay">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.github.com/sujuouda">Website</a>
     <p class="copyright">© 2022 Swat Vongsay</p>
