--- a/index.html
+++ b/index.html
@@ -9,55 +9,57 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap" rel="stylesheet">
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
-  <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="could-img">
-    <h1>I'm Swat</h1>
-    <h2>A <span class="pro">pro</span>grammer.</h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="could-img">
-    <img src="images/mountain.png" alt="mountain-img">
-  </div>
-
-  <div class="middle-container">
-    <div class="profile">
-      <img src="images/swat-headshot.png" alt="swat-photo">
-      <h2>Hello.</h2>
-      <p class="intro">I am a Software and DevSecOps Engineer. I have an adorable corgi.</p>
+  <div class="row">
+    <div class="top-container col-lg-12 col-md-6">
+      <img class="top-cloud" src="images/cloud.png" alt="could-img">
+      <h1>I'm Swat</h1>
+      <h2>A <span class="pro">pro</span>grammer.</h2>
+      <img class="bottom-cloud" src="images/cloud.png" alt="could-img">
+      <img src="images/mountain.png" alt="mountain-img">
     </div>
-    <hr>
-    <div class="skills">
-      <h2>My Skills.</h2>
-      <div class="skill-row">
-        <img class="code-img" src="https://as1.ftcdn.net/v2/jpg/03/29/01/04/1000_F_329010448_vweq31DdmKGXn1T9sJuLQgr0LmUcqXfb.jpg" alt="binary-img">
-        <h3>App development</h3>
-        <p class="code-skill-description">Learning how to develop a web page to promote my future apps.</p>
+
+    <div class="middle-container col-lg-12">
+      <div class="profile">
+        <img class="profile-image" src="images/swat-headshot.png" alt="swat-photo">
+        <h2>Hello.</h2>
+        <p class="intro">I am a Software and DevSecOps Engineer. I have an adorable corgi.</p>
       </div>
-      <div class="skill-row">
-        <img class="chili-img" src="https://as2.ftcdn.net/v2/jpg/02/67/76/37/1000_F_267763761_uLdjGdFChN9qmHzDHIP46TE6HgtHltwV.jpg" alt="chicken-nuggets">
-        <h3>Chicken nuggets challenge</h3>
-        <p class="chili-skill-description">Training for the chicken nugget challenge at my company.</p>
+      <hr>
+
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="code-img" src="https://as1.ftcdn.net/v2/jpg/03/29/01/04/1000_F_329010448_vweq31DdmKGXn1T9sJuLQgr0LmUcqXfb.jpg" alt="binary-img">
+          <h3>App development</h3>
+          <p class="code-skill-description">Learning how to develop a web page to promote my future apps.</p>
+        </div>
+        <div class="skill-row">
+          <img class="nugget-img" src="https://as2.ftcdn.net/v2/jpg/02/67/76/37/1000_F_267763761_uLdjGdFChN9qmHzDHIP46TE6HgtHltwV.jpg" alt="chicken-nuggets">
+          <h3>Chicken nuggets challenge</h3>
+          <p class="nugget-skill-description">Training for the chicken nugget challenge at my company.</p>
+        </div>
+      </div>
+      <hr>
+
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>If you want to challenge me or see my corgi.</h3>
+        <p class="contact-message">Corgis are cute and leave a like and subscribe.</p>
+        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
       </div>
     </div>
-    <hr>
-    <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <h3>If you want to challenge me or see my corgi.</h3>
-      <p class="contact-message">Corgis are cute and leave a like and subscribe.</p>
-      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+
+    <div class="bottom-container col-lg-12">
+      <a class="footer-link" href="https://www.linkedin.com/in/svongsay">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.github.com/sujuouda">Website</a>
+      <p class="copyright">© 2022 Swat Vongsay</p>
     </div>
+
   </div>
-
-
-  <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/svongsay">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.github.com/sujuouda">Website</a>
-    <p class="copyright">© 2022 Swat Vongsay</p>
-  </div>
-
 </body>
-
 </html>
