Realigned a lot of items.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Swat's site</title>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="images/courml.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap" rel="stylesheet">
@@ -19,19 +19,24 @@
       <h1>I'm Swat</h1>
       <h2>A <span class="pro">pro</span>grammer.</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="could-img">
-      <img src="images/mountain.png" alt="mountain-img">
+      <img class="mountain-image" src="images/mountain.png" alt="mountain-img">
     </div>
 
     <div class="middle-container col-lg-12">
       <div class="profile">
         <img class="profile-image" src="images/swat-headshot.png" alt="swat-photo">
-        <h2>Hello.</h2>
+        <!-- <h2>Hello.</h2> -->
         <p class="intro">I am a Software and DevSecOps Engineer. I have an adorable corgi.</p>
       </div>
       <hr>
 
       <div class="skills">
         <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="code-img" src="https://as2.ftcdn.net/v2/jpg/00/65/77/21/1000_F_65772192_jm8MYL39Bp5pp90KlyGWrRgErYa70lZZ.jpg" alt="binary-img">
+          <h3>Software Tools Development</h3>
+          <p class="code-skill-description">Experienced in develop software tools to assist developers in tasking and automation.</p>
+        </div>
         <div class="skill-row">
           <img class="code-img" src="https://as1.ftcdn.net/v2/jpg/03/29/01/04/1000_F_329010448_vweq31DdmKGXn1T9sJuLQgr0LmUcqXfb.jpg" alt="binary-img">
           <h3>App development</h3>
@@ -40,20 +45,20 @@
         <div class="skill-row">
           <img class="nugget-img" src="https://as2.ftcdn.net/v2/jpg/02/67/76/37/1000_F_267763761_uLdjGdFChN9qmHzDHIP46TE6HgtHltwV.jpg" alt="chicken-nuggets">
           <h3>Chicken nuggets challenge</h3>
-          <p class="nugget-skill-description">Training for the chicken nugget challenge at my company.</p>
+          <p class="nugget-skill-description">Training for the chicken nugget challenge at my company. I can eat 40 nuggests in 30 minutes.</p>
         </div>
       </div>
       <hr>
 
-      <div class="contact-me">
+      <div class="contact-me text-center">
         <h2>Get In Touch</h2>
         <h3>If you want to challenge me or see my corgi.</h3>
-        <p class="contact-message">Corgis are cute and leave a like and subscribe.</p>
-        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        <p class="contact-message">Corgis are cute so leave a like and subscribe.</p>
+        <a class="btn bg-light" href="mailto:sujuswat@email.com">CONTACT ME</a>
       </div>
     </div>
 
-    <div class="bottom-container col-lg-12">
+    <div class="bottom-container col-lg-12 text-center">
       <a class="footer-link" href="https://www.linkedin.com/in/svongsay">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
       <a class="footer-link" href="https://www.github.com/sujuouda">Website</a>
