--- a/index.html
+++ b/index.html
@@ -4,66 +4,113 @@
 <head>
   <meta charset="utf-8">
   <title>Swat's site</title>
+
+  <!-- CSS Stylesheets -->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="images/courml.ico">
+
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <!-- Font Awesome -->
+  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js">
+  </script>
+
   <link href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#about-me">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#work-and-skills">Work</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#social-media">Contact</a>
+      </li>
+    </ul>
+  </div>
+</nav>
   <div class="row">
     <div class="top-container col-lg-12 col-md-6">
       <img class="top-cloud" src="images/cloud.png" alt="could-img">
       <h1>I'm Swat</h1>
       <h2>A <span class="pro">pro</span>grammer.</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="could-img">
-      <img class="mountain-image" src="images/mountain.png" alt="mountain-img">
+      <img class="mountain-image" src="images/Thousand-Sunny.jpg" alt="mountain-img">
     </div>
 
     <div class="middle-container col-lg-12">
-      <div class="profile">
-        <img class="profile-image" src="images/swat-headshot.png" alt="swat-photo">
-        <!-- <h2>Hello.</h2> -->
-        <p class="intro">I am a Software and DevSecOps Engineer. I have an adorable corgi.</p>
-      </div>
+      <section id="about-me">
+        <div class="profile">
+          <img class="profile-image" src="images/swat-headshot.png" alt="swat-photo">
+          <!-- <h2>Hello.</h2> -->
+          <p class="intro">I am a Software and DevSecOps Engineer. I have an adorable corgi.</p>
+        </div>
+        <hr>
+      </section>
+
+      <section id="work-and-skills">
+        <div class="skills">
+          <h2>My Skills.</h2>
+          <div class="skill-row">
+            <img class="code-img" src="https://as2.ftcdn.net/v2/jpg/00/65/77/21/1000_F_65772192_jm8MYL39Bp5pp90KlyGWrRgErYa70lZZ.jpg" alt="binary-img">
+            <h3>Software Tools Development</h3>
+            <p class="code-skill-description">Experienced in develop software tools to assist developers in tasking and automation.</p>
+          </div>
+          <div class="skill-row">
+            <img class="nugget-img" src="https://cdn-icons-png.flaticon.com/512/2916/2916315.png" alt="chicken-nuggets">
+            <h3>Software Test Verification</h3>
+            <p class="nugget-skill-description">Performed software testing using simulator against embedded hardware.</p>
+          </div>
+          <div class="skill-row">
+            <img class="code-img" src="https://as1.ftcdn.net/v2/jpg/03/29/01/04/1000_F_329010448_vweq31DdmKGXn1T9sJuLQgr0LmUcqXfb.jpg" alt="binary-img">
+            <h3>App Development</h3>
+            <p class="code-skill-description">Learning how to develop a web page to promote my future apps.</p>
+          </div>
+          <div class="skill-row">
+            <img class="nugget-img" src="https://as2.ftcdn.net/v2/jpg/02/67/76/37/1000_F_267763761_uLdjGdFChN9qmHzDHIP46TE6HgtHltwV.jpg" alt="chicken-nuggets">
+            <h3>Chicken Nuggets Challenge</h3>
+            <p class="nugget-skill-description">Training for the chicken nugget challenge at my company. I can eat 40 nuggests in 30 minutes.</p>
+          </div>
+        </div>
+
+      </section>
+
       <hr>
 
-      <div class="skills">
-        <h2>My Skills.</h2>
-        <div class="skill-row">
-          <img class="code-img" src="https://as2.ftcdn.net/v2/jpg/00/65/77/21/1000_F_65772192_jm8MYL39Bp5pp90KlyGWrRgErYa70lZZ.jpg" alt="binary-img">
-          <h3>Software Tools Development</h3>
-          <p class="code-skill-description">Experienced in develop software tools to assist developers in tasking and automation.</p>
-        </div>
-        <div class="skill-row">
-          <img class="code-img" src="https://as1.ftcdn.net/v2/jpg/03/29/01/04/1000_F_329010448_vweq31DdmKGXn1T9sJuLQgr0LmUcqXfb.jpg" alt="binary-img">
-          <h3>App development</h3>
-          <p class="code-skill-description">Learning how to develop a web page to promote my future apps.</p>
-        </div>
-        <div class="skill-row">
-          <img class="nugget-img" src="https://as2.ftcdn.net/v2/jpg/02/67/76/37/1000_F_267763761_uLdjGdFChN9qmHzDHIP46TE6HgtHltwV.jpg" alt="chicken-nuggets">
-          <h3>Chicken nuggets challenge</h3>
-          <p class="nugget-skill-description">Training for the chicken nugget challenge at my company. I can eat 40 nuggests in 30 minutes.</p>
-        </div>
-      </div>
-      <hr>
-
-      <div class="contact-me text-center">
+      <div class="contact-me text-center col-lg-12">
         <h2>Get In Touch</h2>
         <h3>If you want to challenge me or see my corgi.</h3>
         <p class="contact-message">Corgis are cute so leave a like and subscribe.</p>
-        <a class="btn bg-light" href="mailto:sujuswat@email.com">CONTACT ME</a>
+        <a class="btn bg-light" href="mailto:sujuswat@hotmail.com">CONTACT ME</a>
       </div>
     </div>
 
-    <div class="bottom-container col-lg-12 text-center">
-      <a class="footer-link" href="https://www.linkedin.com/in/svongsay">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.github.com/sujuouda">Website</a>
-      <p class="copyright">© 2022 Swat Vongsay</p>
-    </div>
+    <section id="social-media">
+      <div class="bottom-container col-lg-12 text-center">
+        <a class="footer-link" href="https://www.linkedin.com/in/svongsay"><i class="social-icon fab fa-linkedin"></i></a>
+        <a class="footer-link" href="https://twitter.com/svongsay"><i class="social-icon fab fa-twitter"></i></a>
+        <a class="footer-link" href="https://www.github.com/sujuouda"><i class="social-icon fab fa-github"></i></a>
+
+        <p class="copyright">© 2022 Swat Vongsay</p>
+      </div>
+    </section>
+
 
   </div>
 </body>
