Fixed drop down menu. Added instagram link.

--- a/index.html
+++ b/index.html
@@ -19,34 +19,38 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#about-me">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#work-and-skills">Work</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#social-media">Contact</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+    <div class="container-fluid">
+      <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about-me">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#work-and-skills">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#social-media">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <div class="row">
-    <div class="top-container col-lg-12 col-md-6">
+    <div class="top-container col-lg-12">
       <img class="top-cloud" src="images/cloud.png" alt="could-img">
       <h1>I'm Swat</h1>
       <h2>A <span class="pro">pro</span>grammer.</h2>
@@ -96,7 +100,7 @@
       <div class="contact-me text-center col-lg-12">
         <h2>Get In Touch</h2>
         <h3>If you want to challenge me or see my corgi.</h3>
-        <p class="contact-message">Corgis are cute so leave a like and subscribe.</p>
+        <p class="contact-message"><a href="https://www.instagram.com/cuteasabotan/"><i class="fab fa-instagram"></i></a>Corgis are cute so leave a like and follow.</p>
         <a class="btn bg-light" href="mailto:sujuswat@hotmail.com">CONTACT ME</a>
       </div>
     </div>
@@ -114,4 +118,5 @@
 
   </div>
 </body>
+
 </html>
