--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="top-container col-lg-12">
       <img class="top-cloud" src="images/cloud.png" alt="could-img">
       <h1>I'm Swat</h1>
-      <h2>A <span class="pro">pro</span>grammer.</h2>
+      <h2>A programmer.</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="could-img">
       <img class="mountain-image" src="images/Thousand-Sunny.jpg" alt="mountain-img">
     </div>
