--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about-me">About</a>
+            <a class="nav-link" href="#about-me">About Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#work-and-skills">Work</a>
@@ -60,16 +60,29 @@
 
     <div class="middle-container col-lg-12">
       <section id="about-me">
+        <h2>About Me</h2>
         <div class="profile">
           <img class="profile-image" src="images/swat-headshot.png" alt="swat-photo">
-          <!-- <h2>Hello.</h2> -->
-          <p class="intro">I am a Software and DevSecOps Engineer. I have an adorable corgi.</p>
+          <div class="">
+            <p class="intro">Hi there! From building Yu-Gi-Oh decks at a young age to assembling Pokemon nanoblocks today, I have always enjoyed building things. Then I discovered programming and the many things I can create from software!</p>
+            <p>I am a Software and DevSecOps Engineer. I began my career at an aerospace defense company where I developed various skills with systems engineering, software development, and testing. Then,I decided to try DevSecOps where I set up pipelines for CI/CD for various teams. After a couple years in DevSecOps, I learned I missed the development and decided to learn full stack.</p>
+            <p>Outside, I enjoy rock climbing, running, and spending time with my adorable corgi!</p>
+            <p>These are some tech I have been involved in:</p>
+          </div>
+          <ul class="skill-list">
+            <li>C++</li>
+            <li>Python</li>
+            <li>Java</li>
+            <li>Linux</li>
+            <li>Bash</li>
+          </ul>
+
         </div>
       </section>
 
       <section id="work-and-skills">
         <div class="skills">
-          <h2>My Skills.</h2>
+          <h2>Work Experience</h2>
           <div class="skill-row">
             <img class="code-img" src="https://as2.ftcdn.net/v2/jpg/00/65/77/21/1000_F_65772192_jm8MYL39Bp5pp90KlyGWrRgErYa70lZZ.jpg" alt="binary-img">
             <h3>Software Tools Development</h3>
