--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
           <img class="profile-image" src="images/swat-headshot.png" alt="swat-photo">
           <div class="">
             <p class="intro">Hi there! From building Yu-Gi-Oh decks at a young age to assembling Pokemon nanoblocks today, I have always enjoyed building things. Then I discovered programming and the many things I can create from software!</p>
-            <p>I am a Software and DevSecOps Engineer. I began my career at an aerospace defense company where I developed various skills with systems engineering, software development, and testing. Then,I decided to try DevSecOps where I set up pipelines for CI/CD for various teams. After a couple years in DevSecOps, I learned I missed the development and decided to learn full stack.</p>
+            <p>I am a Software and DevSecOps Engineer. I began my career at an aerospace defense company where I developed various skills with systems engineering, software development, and testing. Then,I decided to try DevSecOps where I set up
+              pipelines for CI/CD for various teams. After a couple years in DevSecOps, I learned I missed the development and decided to learn full stack.</p>
             <p>Outside, I enjoy rock climbing, running, and spending time with my adorable corgi!</p>
             <p>These are some tech I have been involved in:</p>
           </div>
@@ -83,7 +84,32 @@
       <section id="work-and-skills">
         <div class="skills">
           <h2>Work Experience</h2>
-          <div class="skill-row">
+          <div class="skill-row skill-left">
+            <h3>Software Tools Development</h3>
+            <button type="button" name="button">button1</button>
+            <button type="button" name="button">button2</button>
+            <button type="button" name="button">button3</button>
+          </div>
+          <div class="skill-row skill-right">
+            <div class="panel-0">
+              <h3>Software & DevSecOps Engineer</h3>
+              <p>Present</p>
+              <ul>
+                <li>Pipelines</li>
+                <li>Automation</li>
+              </ul>
+
+            </div>
+            <div class="panel-1">
+              <h3>Software Engineer</h3>
+              <p>2021</p>
+            </div>
+            <div class="panel-1">
+              <h3>Software Engineer Intern</h3>
+              <p>2021</p>
+            </div>
+          </div>
+          <!-- <div class="skill-row">
             <img class="code-img" src="https://as2.ftcdn.net/v2/jpg/00/65/77/21/1000_F_65772192_jm8MYL39Bp5pp90KlyGWrRgErYa70lZZ.jpg" alt="binary-img">
             <h3>Software Tools Development</h3>
             <p class="code-skill-description">Experienced in develop software tools to assist developers in tasking and automation.</p>
@@ -102,9 +128,8 @@
             <img class="nugget-img" src="https://as2.ftcdn.net/v2/jpg/02/67/76/37/1000_F_267763761_uLdjGdFChN9qmHzDHIP46TE6HgtHltwV.jpg" alt="chicken-nuggets">
             <h3>Chicken Nuggets Challenge</h3>
             <p class="nugget-skill-description">Training for the chicken nugget challenge at my company. I can eat 40 nuggests in 30 minutes.</p>
-          </div>
+          </div> -->
         </div>
-
       </section>
 
       <div class="contact-me text-center col-lg-12">
