--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <div class="profile">
           <img class="profile-image" src="images/swat-headshot.png" alt="swat-photo">
           <div class="">
-            <p class="intro">Hi there! From building Yu-Gi-Oh decks at a young age to assembling Pokemon nanoblocks today, I have always enjoyed building things. Then I discovered programming and the many things I can create from software!</p>
-            <p>I am a Software and DevSecOps Engineer. I began my career at an aerospace defense company where I developed various skills with systems engineering, software development, and testing. Then,I decided to try DevSecOps where I set up
+            <p class="intro">Hi there! From building Yu-Gi-Oh decks at a young age to assembling Pokemon nanoblocks today, I have always enjoyed building things. Well, with programming I can build a lot of things!</p>
+            <p>I am a Software and DevSecOps Engineer. I began my career at an aerospace defense company where I developed various skills with systems engineering, software development, and testing. Then, I decided to try DevSecOps where I set up
               pipelines for CI/CD for various teams. After a couple years in DevSecOps, I learned I missed the development and decided to learn full stack.</p>
             <p>Outside, I enjoy rock climbing, running, and spending time with my adorable corgi!</p>
             <p>These are some tech I have been involved in:</p>
@@ -86,15 +86,23 @@
           <h2>Work Experience</h2>
           <div class="skill-row skill-left">
             <h3>Software Tools Development</h3>
-            <button type="button" name="button">button1</button>
-            <button type="button" name="button">button2</button>
-            <button type="button" name="button">button3</button>
+            <button class="revacomm work">RevaComm</button>
+            <button class="northrop_grumman work">Northrop_Grumman</button>
+            <button class="internships work">Internships</button>
+            <button class="w drum">w</button>
+            <button class="a drum">a</button>
+            <button class="s drum">s</button>
+            <button class="d drum">d</button>
+            <button class="j drum">j</button>
+            <button class="k drum">k</button>
+            <button class="l drum">l</button>
           </div>
           <div class="skill-row skill-right">
             <div class="panel-0">
               <h3>Software & DevSecOps Engineer</h3>
               <p>Present</p>
               <ul>
+                <li>Backend functionality feature implementation</li>
                 <li>Pipelines</li>
                 <li>Automation</li>
               </ul>
@@ -152,6 +160,7 @@
 
 
   </div>
+  <script src="index.js" charset="utf-8"></script>
 </body>
 
 </html>
