Fixed button for jobs and clean up.

--- a/index.html
+++ b/index.html
@@ -89,16 +89,9 @@
             <button class="revacomm work">RevaComm</button>
             <button class="northrop_grumman work">Northrop_Grumman</button>
             <button class="internships work">Internships</button>
-            <button class="w drum">w</button>
-            <button class="a drum">a</button>
-            <button class="s drum">s</button>
-            <button class="d drum">d</button>
-            <button class="j drum">j</button>
-            <button class="k drum">k</button>
-            <button class="l drum">l</button>
           </div>
           <div class="skill-row skill-right">
-            <div class="panel-0">
+            <div class="revacomm panel">
               <h3>Software & DevSecOps Engineer</h3>
               <p>Present</p>
               <ul>
@@ -108,13 +101,22 @@
               </ul>
 
             </div>
-            <div class="panel-1">
+            <div class="northrop_grumman panel">
               <h3>Software Engineer</h3>
               <p>2021</p>
+              <ul>
+                <li>DevOps</li>
+                <li>Testing</li>
+                <li>Simulation</li>
+              </ul>
             </div>
-            <div class="panel-1">
+            <div class="internships panel">
               <h3>Software Engineer Intern</h3>
-              <p>2021</p>
+              <p>2016</p>
+              <ul>
+                <li>Convert</li>
+                <li> <a href="https://www.youtube.com/watch?v=mT11GvBkrlU">QuadCup</a> </li>
+              </ul>
             </div>
           </div>
           <!-- <div class="skill-row">
