Fixed CSS and removed dead code.

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <h2>About Me</h2>
         <div class="profile">
           <img class="profile-image" src="images/swat-headshot.png" alt="swat-photo">
-          <div class="">
-            <p class="intro">Hi there! From building Yu-Gi-Oh decks at a young age to assembling Pokémon nanoblocks today, I have always enjoyed building things. Well, with programming I can build a lot of things!</p>
+          <div class="intro-box">
+            <p class="intro">Hi there! From building Yu-Gi-Oh decks at a young age to assembling Pokémon legos today, I have always enjoyed building things. Well, with programming I can build a lot of things!</p>
             <p class="intro">I am a Software and DevSecOps Engineer. I began my career at an aerospace defense company where I developed various skills with systems engineering, software development, and testing. Then, I moved onto DevSecOps where I set up
               pipelines for CI/CD for various teams. After a couple years in DevSecOps, I learned I missed the development and decided to build apps.</p>
             <p class="intro">Outside, I enjoy rock climbing, running, and spending time with my adorable corgi!</p>
